--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Chrome Popup mess",
+  "name": "Tempo",
   "description": "Create popup per 5min",
   "version": "1.0",
 
