--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,18 @@
 {
   "manifest_version": 2,
-
   "name": "Tempo",
   "description": "Create popup per 5min",
   "version": "1.0",
-
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+	"name": "Tempo"
   },
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+	"persistent": false
   },
   "permissions": [
 	"identity",
 	"storage",
-    "tabs",
-    "storage",
-    "<all_urls>",
-    "identity",
-    "https://*.googleapis.com/*",
-	"https://www.googleapis.com/auth/documents"
+    "tabs"
   ]
 }
