update to suppot timer reset value when user input 0 or empty

--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
 	"name": "Tempo"
   },
   "background": {
-    "scripts": ["background.js"],
-	"persistent": false
+    "scripts": ["background.js"]
   },
   "permissions": [
 	"identity",
