update email label

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
     "scripts": ["background.js"]
   },
   "permissions": [
-	"identity",
+	"identity","identity.email",
 	"storage",
     "tabs",
     "https://*.googleapis.com/*"
